# agentic-uat-app

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  requirements.txt
.github/workflows/: build.yml  ci.yml  database-migration.yml  deploy-production.yml  deploy-staging.yml  pr-preview.yml  security.yml
app/: audit.py  auth.py  main.py  models.py  reporting.py  rtm.py  schemas.py  settings.py  startup.py
app/llm/: prompts.py  provider.py
app/routes/: admin.py  auth.py  core.py  jobs.py  ui.py
app/static/: app.css
app/templates/: admin_users.html  applications.html  base.html  bundle_detail.html  bundles.html  dashboard.html  develop_test_script.html  evidence.html  explore_map.html  job.html  llm_settings.html  login.html  page_detail.html  projects.html  requirements.html  run_report.html  runs.html
app/worker/: celery_app.py  tasks.py
backend/: .env.example  Dockerfile  Dockerfile.worker  pyproject.toml
backend/app/: config.py  cosmos.py  cosmos_schema.py  database.py  dependencies.py  logging_config.py  main.py
backend/app/ai/: chains.py  client.py
backend/app/ai/prompts/: crawler_analysis.py  requirement_analysis.py  test_generation.py
backend/app/auth/: azure_ad.py  permissions.py
backend/app/crawler/: base.py  sap_fiori_crawler.py  web_crawler.py
backend/app/exporters/: base.py  gherkin_exporter.py  playwright_exporter.py  pytest_exporter.py  robot_framework_exporter.py  selenium_exporter.py
backend/app/middleware/: rbac.py  tenant.py
backend/app/models/: __init__.py  audit_log.py  base.py  crawl_job.py  defect.py  global_config.py  job.py  project.py  requirement.py  role.py  tenant.py  test_cycle.py  test_script.py  user.py
backend/app/routers/: ai_generation.py  auth.py  crawler.py  projects.py  reports.py  requirements.py  tenants.py  test_cycles.py  test_scripts.py  users.py
backend/app/schemas/: __init__.py  ai_generation.py  common.py  crawl_job.py  defect.py  job.py  project.py  requirement.py  tenant.py  test_cycle.py  test_script.py  user.py
backend/app/services/: ai_generation_service.py  blob_service.py  crawler_service.py  export_service.py  project_service.py  requirement_service.py  servicebus_service.py  tenant_service.py  test_cycle_service.py  test_script_service.py  user_service.py
backend/app/worker/: service_bus_worker.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py
backend/tests/: conftest.py  factories.py
backend/tests/integration/: test_api_auth.py  test_api_workflow.py  test_crawler_workflow.py
backend/tests/unit/: test_ai_chains.py  test_ai_generation.py  test_crawler_utils.py  test_crawlers.py  test_exporters.py  test_permissions.py  test_rbac.py  test_tenant_isolation.py  test_worker_ai_handler.py
docs/: API_DESIGN.md  ARCHITECTURE.md  DATA_MODEL.md  GITHUB_SETUP.md  RBAC_MATRIX.md
docs/ADR/: 001-tech-stack.md  002-multi-tenancy.md  003-ai-integration.md  004-crawler-design.md
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/auth/: ProtectedRoute.tsx
frontend/src/hooks/: useCurrentTenant.ts  useJobs.ts  usePermission.ts  usePolling.ts  useProjects.ts  useRequirements.ts  useTestCycles.ts  useTestScripts.ts
frontend/src/pages/: CrawlerPage.tsx  DashboardPage.tsx  LoginPage.tsx  ProjectDetailPage.tsx  ProjectsPage.tsx  ReportsPage.tsx  (+4 more)
infrastructure/bicep/: main.bicep
migrations/: env.py
migrations/versions/: 0001_init.py  0002_pages_elements.py  0003_llm_settings.py  0004_bundle_llm_metadata.py
scripts/: migrate.py
(+68 files in other folders)
